Improve swagger errors examples
