# internal/infrastructure/driver_adapters/handlers/cars.go
@@ -71,7 +71,7 @@ func (ch Cars) Register(w http.ResponseWriter, r *http.Request) {
 // @Produce json
 // @Param id path string true "Car UUID" format(uuid)
 // @Success 200 {object} docs.CarResponse "Obtained car"
-// @Failure 400 {object} docs.ErrorBadRequest "Bad Request"
+// @Failure 400 {object} docs.ErrorinvalidUUID "Bad Request"
 // @Failure 404 {object} docs.ErrorCarNotFound "Not Found"
 // @Failure 500 {object} docs.ErrorInternalServer "Internal Server Error"
 // @Tags Cars
@@ -112,7 +112,7 @@ func (ch Cars) Get(w http.ResponseWriter, r *http.Request) {
 // @Param id path string true "Car UUID" format(uuid)
 // @Param car body docs.CarRequest true "Car information (allowed types: Sedan, Luxury, Sports Car, Limousine; allowed statuses: Available, Unavailable)"
 // @Success 200 {object} docs.CarResponse "Updated car"
-// @Failure 400 {object} docs.ErrorBadRequest "Bad Request"
+// @Failure 400 {object} docs.ErrorInvalidCarStatus "Bad Request"
 // @Failure 404 {object} docs.ErrorCarNotFound "Not Found"
 // @Failure 500 {object} docs.ErrorInternalServer "Internal Server Error"
 // @Tags Cars
@@ -157,7 +157,7 @@ func (ch Cars) FullUpdate(w http.ResponseWriter, r *http.Request) {
 // @Produce json
 // @Param id path string true "Car UUID" format(uuid)
 // @Success 204 "No Content"
-// @Failure 400 {object} docs.ErrorBadRequest "Bad Request"
+// @Failure 400 {object} docs.ErrorinvalidUUID "Bad Request"
 // @Failure 404 {object} docs.ErrorCarNotFound "Not Found"
 // @Failure 500 {object} docs.ErrorInternalServer "Internal Server Error"
 // @Tags Cars
@@ -192,7 +192,7 @@ func (ch Cars) Delete(w http.ResponseWriter, r *http.Request) {
 // @Param city query string true "City name"
 // @Param from_car_id query string false "Last seen car ID" format(uuid)
 // @Success 200 {object} docs.ListCarsResponse "Obtained car"
-// @Failure 400 {object} docs.ErrorBadRequest "Bad Request"
+// @Failure 400 {object} docs.ErrorCityQueryParamEmpty "Bad Request"
 // @Failure 500 {object} docs.ErrorInternalServer "Internal Server Error"
 // @Tags Cars
 // @Router /cars/ [get]
