# internal/infrastructure/driver_adapters/handlers/users.go
@@ -30,7 +30,7 @@ func NewUsers(us ports.UsersService) Users {
 // @Produce json
 // @Param user body docs.UserRequest true "User information (allowed types: Customer, Admin; allowed statuses: Active, Inactive)"
 // @Success 201 {object} docs.UserResponse "Created user"
-// @Failure 400 {object} docs.ErrorBadRequest "Bad Request"
+// @Failure 400 {object} docs.ErrorEmailAlreadyRegistered "Bad Request"
 // @Failure 500 {object} docs.ErrorInternalServer "Internal Server Error"
 // @Tags Users
 // @Router /users [post]
@@ -63,8 +63,8 @@ func (uh Users) SignUp(w http.ResponseWriter, r *http.Request) {
 // @Produce json
 // @Param id path string true "User UUID" format(uuid)
 // @Success 200 {object} docs.UserResponse "Obtained user"
-// @Failure 400 {object} docs.ErrorBadRequest "Bad Request"
-// @Failure 404 {object} docs.ErrorNotFound "Not Found"
+// @Failure 400 {object} docs.ErrorinvalidUUID "Bad Request"
+// @Failure 404 {object} docs.ErrorUserNotFound "Not Found"
 // @Failure 500 {object} docs.ErrorInternalServer "Internal Server Error"
 // @Tags Users
 // @Router /users/{id} [get]
@@ -103,8 +103,8 @@ func (uh Users) Get(w http.ResponseWriter, r *http.Request) {
 // @Param id path string true "User UUID" format(uuid)
 // @Param user body docs.UserRequest true "User information (allowed types: Customer, Admin; allowed statuses: Active, Inactive)"
 // @Success 200 {object} docs.UserResponse "Updated user"
-// @Failure 400 {object} docs.ErrorBadRequest "Bad Request"
-// @Failure 404 {object} docs.ErrorNotFound "Not Found"
+// @Failure 400 {object} docs.ErrorInvalidEmail "Bad Request"
+// @Failure 404 {object} docs.ErrorUserNotFound "Not Found"
 // @Failure 500 {object} docs.ErrorInternalServer "Internal Server Error"
 // @Tags Users
 // @Router /users/{id} [put]
@@ -148,8 +148,8 @@ func (uh Users) FullUpdate(w http.ResponseWriter, r *http.Request) {
 // @Produce json
 // @Param id path string true "User UUID" format(uuid)
 // @Success 204 "No Content"
-// @Failure 400 {object} docs.ErrorBadRequest "Bad Request"
-// @Failure 404 {object} docs.ErrorNotFound "Not Found"
+// @Failure 400 {object} docs.ErrorinvalidUUID "Bad Request"
+// @Failure 404 {object} docs.ErrorUserNotFound "Not Found"
 // @Failure 500 {object} docs.ErrorInternalServer "Internal Server Error"
 // @Tags Users
 // @Router /users/{id} [delete]
